# fractalviewer

./: .gitignore  CMakeLists.txt  LICENSE  default.nix  mandelbrot.cpp
glad/: .gitattributes
glad/include/glad/: glad.h
glad/src/: glad.c
